# boilerplateCodeDoc

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBoilerplateCodeDocRules.cmake  FindDecoupleUserOutputRules.cmake
include/: boilerplateCodeDoc.h  decoupleUserOutput.h
json/: schema.json
output/: BoilerplateCodeDoc.h  BoilerplateCodeDoc.html
src/: CMakeLists.txt  boilerplateCodeDoc.cpp  decoupleUserOutput.cpp  main.cpp  tool.cpp
templates/: Doxyfile.in  version.h.in
test/: CMakeLists.txt  main.cpp
